# C_Learning_Journey

./: README.md
Hello_world_project/app/: README.md
Hello_world_project/app/basic_pointer_project/app/: README.md
Hello_world_project/app/basic_pointer_project/app/src/: main.c
Hello_world_project/app/src/: main.c
pointer_arithmetic_project/: README.md
pointer_arithmetic_project/app/: CMakeLists.txt
pointer_arithmetic_project/app/src/: main.c
